Switch to Deepgram for transcription (bypass YouTube IP blocking)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,6 +2,9 @@
 OPENAI_API_KEY=your-openai-api-key-here
 OPENAI_MODEL=gpt-4.1-mini
 
+# Deepgram Configuration (for transcription)
+DEEPGRAM_API_KEY=your-deepgram-api-key-here
+
 # CORS Configuration (comma-separated)
 ALLOWED_ORIGINS=chrome-extension://YOUR_EXTENSION_ID,http://localhost:3000
 
